# interactive_world

./: .gitignore  .travis.yml  AUTHORS.md  README.md
informed_object_search/: CHANGELOG.rst  CMakeLists.txt  package.xml
informed_object_search/include/informed_object_search/: ObjectOnSurfaceModel.h  ObjectSearcher.h
informed_object_search/launch/: informed_object_search.launch  informed_object_search_frontend.launch
informed_object_search/nodes/: informed_object_search.cpp
informed_object_search/rviz/: view.rviz
informed_object_search/src/: ObjectOnSurfaceModel.cpp  ObjectSearcher.cpp
interactive_world/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_world_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_world_msgs/action/: DriveAndSearch.action  DriveToSurface.action  ObjectSearch.action
interactive_world_msgs/msg/: Configuration.msg  Item.msg  Model.msg  Placement.msg  PlacementSet.msg  PointOfInterest.msg  Room.msg  Surface.msg  TaskModels.msg  TaskTrainingData.msg
interactive_world_msgs/srv/: FindObservations.srv  FindSurface.srv  GetSurfaces.srv  LearnModels.srv  LoadModels.srv  Parse.srv  SetObservationsRemoved.srv  StoreObservation.srv  TransformToSurfaceFrame.srv
interactive_world_parser/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_world_parser/include/interactive_world_parser/: interactive_world_parser.hpp
interactive_world_parser/launch/: interactive_world_parser.launch
interactive_world_parser/src/: interactive_world_parser.cpp
interactive_world_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
interactive_world_tools/config/: world.yaml
interactive_world_tools/include/interactive_world_tools/: HighLevelActions.h  PlacementSurface.h  PointOfInterest.h  Room.h  Surface.h  World.h  interactive_world_model_fetcher.hpp
interactive_world_tools/nodes/: high_level_action_server.cpp
interactive_world_tools/src/: HighLevelActions.cpp  PlacementSurface.cpp  PointOfInterest.cpp  Room.cpp  Surface.cpp  World.cpp  interactive_world_model_fetcher.cpp
jinteractiveworld/: CHANGELOG.rst  CMakeLists.txt  package.xml  pom.xml
jinteractiveworld/scripts/: interactive_world_learner
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/data/: DataPoint.java  DataSet.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/model/: ClusteringModel.java  DataSetModel.java  EMModel.java  Model.java  Placement.java  State.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/model/relevance/: GroundTruthTable.java  HashMapTable.java  ModelSetTable.java  RelevanceTable.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/model/transform/: RotationMatrix.java  Transform.java  TransformNode.java  TransformTree.java  Vector3.java  Vector4.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/ros/: InteractiveWorldLearner.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/task/: DirtyDishes.java  MagazinePlacement.java  TableSetting.java  Task.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/visualization/model/: StateFrame.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/visualization/world/: BedNode.java  BurnerNode.java  CabinetNode.java  ChairNode.java  CoffeeTableNode.java  CouchNode.java  CounterNode.java  CupNode.java  DiningTableNode.java  DresserNode.java  ForkNode.java  MagazinesNode.java  NightstandNode.java  OvenNode.java  PillowNode.java  PlateNode.java  RefrigeratorNode.java  SinkNode.java  SinkUnitNode.java  SpeakerNode.java  SpoonNode.java  TVNode.java
jinteractiveworld/src/main/java/edu/wpi/rail/jinteractiveworld/world/: Bed.java  Burner.java  Cabinet.java  Chair.java  CoffeeTable.java  Couch.java  Counter.java  Cup.java  DiningTable.java  Dresser.java  Fork.java  Furniture.java  Item.java  Magazines.java  Nightstand.java  Object.java  Oven.java  Pillow.java  Plate.java  Refrigerator.java  Sink.java  SinkUnit.java  Speaker.java  Spoon.java  TV.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/data/: TestDataSet.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/model/: TestClusteringModel.java  TestDataSetModel.java  TestEMModel.java  TestPlacement.java  TestState.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/model/relevance/: TestGroundTruthTable.java  TestHashMapTable.java  TestModelSetTable.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/model/transform/: TestRotationMatrix.java  TestTransform.java  TestTransformNode.java  TestTransformTree.java  TestVector3.java  TestVector4.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/task/: TestDirtyDishes.java  TestMagazinePlacement.java  TestTableSetting.java  TestTask.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/visualization/: TestStateFrame.java
jinteractiveworld/src/test/java/edu/wpi/rail/jinteractiveworld/world/: TestBed.java  TestBurner.java  TestCabinet.java  TestChair.java  TestCoffeeTable.java  TestCouch.java  TestCounter.java  TestCup.java  TestDiningTable.java  TestDresser.java  TestFork.java  TestFurniture.java  TestItem.java  TestMagazines.java  TestNightstand.java  TestObject.java  TestOven.java  TestPillow.java  TestPlate.java  TestRefrigerator.java  TestSink.java  TestSinkUnit.java  TestSpeaker.java  TestSpoon.java  TestTV.java
spatial_world_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
spatial_world_model/config/: mapping.yaml  surface_frames.yaml
spatial_world_model/include/spatial_world_model/: PointOfInterest.h  RecognizedObjectsListener.h  Surface.h  Tracker.h  spatial_world_model_server.h  spatial_world_model_server.hpp
spatial_world_model/launch/: tracker.launch
spatial_world_model/nodes/: recognized_objects_listener.cpp
spatial_world_model/src/: RecognizedObjectsListener.cpp  Tracker.cpp  spatial_world_model_server.cpp
spatial_world_model/src/nodes/: spatial_world_model_tracker.cpp
(+36 files in other folders)
