 <package>
  <name>interactive_world</name>
  <version>0.0.4</version>
  <description>Metapackage for the Interactive World</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/interactive_world</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/interactive_world</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>interactive_world_msgs</run_depend>
  <run_depend>interactive_world_parser</run_depend>
  <run_depend>interactive_world_tools</run_depend>
  <run_depend>jinteractiveworld</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>
