<package>
  <name>interactive_world_tools</name>
  <version>0.0.5</version>
  <description>Tools and Modules for the Interactive World Models</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/interactive_world_tools</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/interactive_world</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>interactive_world_msgs</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libjsoncpp-dev</run_depend>
  <run_depend>interactive_world_msgs</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
