<package>
  <name>interactive_world_tools</name>
  <version>0.0.11</version>
  <description>Tools and Modules for the Interactive World Models</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/interactive_world_tools</url>
  <url type="bugtracker">https://github.com/GT-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/GT-RAIL/interactive_world</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>carl_dynamixel</build_depend>
  <build_depend>carl_moveit</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_world_msgs</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>carl_dynamixel</run_depend>
  <run_depend>carl_moveit</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_world_msgs</run_depend>
  <run_depend>libjsoncpp-dev</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>
</package>
