<package>
  <name>jinteractiveworld</name>
  <version>0.0.3</version>
  <description>ROS Wrapper Package for the Java Interactive World Learner</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/jinteractiveworld</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/interactive_world</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>maven</build_depend>
  <build_depend>java</build_depend>

  <run_depend>java</run_depend>
  <run_depend>rosbridge_server</run_depend>
</package>
