<package>
  <name>spatial_world_model</name>
  <version>0.0.3</version>
  <description>Spatial World Model for Object Tracking</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/spatial_world_model</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/interactive_world</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>libmysqlclient-dev</build_depend>
  <build_depend>interactive_world_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libmysqlclient-dev</run_depend>
  <run_depend>interactive_world_msgs</run_depend>
</package>

