<package>
  <name>spatial_world_model</name>
  <version>0.0.7</version>
  <description>Spatial World Model for Object Tracking</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/spatial_world_model</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/interactive_world/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/interactive_world</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>libmysqlclient-dev</build_depend>
  <build_depend>interactive_world_msgs</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libmysqlclient-dev</run_depend>
  <run_depend>interactive_world_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>

